--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>React Slingshot</title>
-    <link rel="shortcut icon" href="favicon.ico">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>React Slingshot</title>
+  <link rel="shortcut icon" href="favicon.ico">
+</head>
+<body>
+<div id="app"></div>
+<script src="/bundle.js"></script>
+</body>
 </html>
