basic authentication moved to Stamplay SDK (only login/logout at this point)

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div id="app"></div>
+<script src="https://drrjhlchpvi7e.cloudfront.net/libs/stamplay-js-sdk/2.0.8/stamplay.min.js"></script>
+<script>Stamplay.init('s4p4ubv04xaj-auth-test');</script>
 <script src="/bundle.js"></script>
 </body>
 </html>
