--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>React Slingshot</title>
+  <title>S.D.B.F.T.</title>
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
